--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
   "devDependencies": {
     "gh-pages": "^1.2.0"
   },
-  "homepage": "https://gameroller.com/guildtracker"
+  "homepage": "https://gameroller.com/"
 }
