--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "lodash": "^4.17.10",
+    "node-fetch": "^2.2.0",
     "qs": "^6.5.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "react-smooth": "^1.0.0"
+    "react-smooth": "^1.0.0",
+    "whatwg-url": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
