--- a/client/.gitignore
+++ b/client/.gitignore
@@ -3,14 +3,12 @@
 
 # dependencies
 /node_modules
-/server/node_modules
-/client/node_modules
 
 # testing
-/client/coverage
+/coverage
 
 # production
-/client/build
+/build
 
 # misc
 .DS_Store
