updated docker to listen to changes

--- a/client/dockerfile
+++ b/client/dockerfile
@@ -5,6 +5,8 @@ FROM node:8
 # Override the base log level (info).
 ENV NPM_CONFIG_LOGLEVEL warn
 
+WORKDIR /client
+
 # Install and configure `serve`.
 RUN npm install -g serve
 CMD serve -s build
