--- a/server/dockerfile
+++ b/server/dockerfile
@@ -5,6 +5,8 @@ FROM node:8
 # Override the base log level (info).
 ENV NPM_CONFIG_LOGLEVEL warn
 
+WORKDIR /server
+
 # Install all dependencies of the current project.
 COPY package.json package.json
 COPY npm-shrinkwrap.json npm-shrinkwrap.json
