--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 API_HOST="http://localhost:3000"
 APP_SERVER_PORT=4000
-REACT_APP_PORT=3000
+REACT_APP_PORT=5000  
+# REACT PORT 3000 for dev 5000 for prod
