--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "whatwg-url": "^7.0.0"
   },
   "scripts": {
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "optionalDependencies": {
     "fsevents": "*"
