--- a/client/dockerfile
+++ b/client/dockerfile
@@ -9,7 +9,7 @@ WORKDIR /client
 
 # Install and configure `serve`.
 RUN npm install -g serve
-CMD serve -s build -p 3000
+CMD serve -s build 
 EXPOSE 5000
 
 # Install all dependencies of the current project.
