major change to production structure

--- a/client/dockerfile
+++ b/client/dockerfile
@@ -8,9 +8,9 @@ ENV NPM_CONFIG_LOGLEVEL warn
 WORKDIR /client
 
 # Install and configure `serve`.
-RUN npm install -g serve
-CMD serve -s build 
-EXPOSE 5000
+#RUN npm install -g serve
+#CMD serve -s build 
+#EXPOSE 5000
 
 # Install all dependencies of the current project.
 COPY package.json package.json
@@ -21,4 +21,6 @@ RUN npm install
 COPY . .
 
 # Build for production.
-RUN npm run build --production
+#RUN npm run build --production
+CMD ["npm","run","prod"]
+EXPOSE 4000
