--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,25 @@
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "react-smooth": "^1.0.0"
+    "react-smooth": "^1.0.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "node-fetch": "^2.2.0",
+    "nodemon": "^1.18.4",
+    "path": "^0.12.7",
+    "qs": "^6.5.2",
+    "whatwg-url": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod": "npm run build && nodemon ./server/server.js"
   },
   "optionalDependencies": {
     "fsevents": "*"
   },
-  "homepage": "http://localhost:3000"
+  "homepage": "http://localhost:4000"
 }
