--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-/env
-
 # dependencies
 /node_modules
-/server/node_modules
-/client/node_modules
 
 # testing
-/client/coverage
+/coverage
 
 # production
-/client/build
+/build
 
 # misc
 .DS_Store
